# monster-player

./: .gitignore  API.md  Cargo.toml  LICENSE  PKGBUILD  README.md  README_ja.md  README_zh-CN.md  README_zh.md  THIRD_PARTY_NOTICES.md  TMPlayer.md  build.rs  make-si.sh  uninstall.sh
.github/workflows/: aur-publish.yml  rust.yml
.opencode/plans/: gui-redesign.md
about/: about.toml
aur/: PKGBUILD
bindings/python/: msplayer.py
include/: msplayer.h
src/: FRAMEWORK.md  ascii_art.rs  config.rs  error.rs  ffi.rs  kernel.rs  lib.rs  main.rs  player.rs
src/api/: client.rs  types.rs
src/app/: event_loop.rs  mode_manager.rs  state.rs
src/audio/: cava.rs
src/data/: about.rs  assets.rs  mod.rs  siren_api.rs
src/origin_gui/: app.rs  mod.rs  settings.rs  theme.rs  ui.rs
src/playback/: mod.rs  remote_fetch.rs  streaming_player.rs  streaming_player.rs.bak
src/tui/: app.rs  event.rs  mod.rs  ui.rs
src/ui/: tui.rs
src/ui/panels/: info_panel.rs  playlist_panel.rs
src/utils/: download.rs  input.rs  mod.rs
