[package]
name = "monster-player"
version = "0.1.0"
edition = "2024"

[lib]
name = "monster_player"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "msplayer"
path = "src/main.rs"

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm"]
gui = ["dep:eframe"]

[dependencies]
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = "0.20"
symphonia = { version = "0.5", default-features = false, features = ["aac", "alac", "flac", "isomp4", "mp3", "ogg", "wav", "vorbis"] }
clap = { version = "4", features = ["derive"] }
directories = "6"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
unicode-width = "0.2"
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
eframe = { version = "0.31", optional = true }
image = "0.25"
fastrand = "2"
rustfft = "6"
toml = "0.8"

[profile.release]
lto = "thin"
codegen-units = 8
